--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -1,8 +1,8 @@
 <div class="header">
   <div class="navbar navbar-default" role="navigation">
     <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 col-xs-12 mt-20 mb-20">
+      <div class="row mt-20 mb-20">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
           <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
             <div class="onoffswitch labeled">
               <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="platformSwitch" ng-model="platformValue">
@@ -21,13 +21,13 @@
             </div>
           </form>
         </div>
-        <div class="col-md-2 hidden-xs hidden-sm m-0 pl-0 top-right text-white">
-          <!--<button type="button" class="btn btn-darkgray mb-10"-->
+        <div class="hidden-xs hidden-sm col-md-2 text-white text-right">
+          <!--<button type="button" class="btn btn-darkgray"-->
                   <!--ng-click="changeTheme($root.theme === 'bg-white' ? 'dark-theme' : 'bg-white')">-->
                   <!--{{$root.theme === 'bg-white' ? 'Dark' : 'Light'}} Theme-->
           <!--</button>-->
-          <button type="button" class="btn btn-darkgray mb-10"
-                  ng-click="toggleOverlay()" >Help</button>
+          <button type="button" class="btn btn-darkgray"
+                  ng-click="toggleOverlay()">Help</button>
         </div>
       </div>
     </div>
